# flask_any_response

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  app_flex.yaml  app_standard.yaml  application.py  cloudbuild.yaml  entrypoint.sh  fla_Dockerfile  main.py  pyproject.toml  requirements.txt  script.sh
.certs2/: cert1.pem  tls.crt  tls.key
GCP_PROFILER/: bench.py
GRPC/: README.md  client.py  hello_grpc.py  main_client.py  main_server.py  server.py
MCP/: README.md  mpc_server.py  test_client.py
UDP/: Dockerfile  README.md  entrypoint.sh  main.py  main_client.py  main_server.py  send.py
WEBSOCKET/: main_server.py  websocket.py
api_gateway/: openapi.yaml
application/: azure_bot.py  config.py  service_dialog_flow_cx.py  utils.py
cloudrun/: service-flask-any-response-a.yaml  service-flask-any-response-b.yaml
curl_tests/: azure_bot_request.json  json-dialogflow.json  json-requests_k8s.json  json-requests_local.json  json-requests_serviceEntry.json
gRPCpy/: client.py  hello_grpc.py  server.py
htmls/: socket-requests-client.html  web-socket.html
istio/: deployment-a-withistio.yaml  deployment-b-withistio.yaml  deployment-c-withistio.yaml  deployment-d-withistio.yaml  deployment-e-withistio.yaml  deployment-f-withistio.yaml  destinationrule-a.yaml  gateway-a.yaml  virtualservice-a.yaml
jmeter/: fla-tests.jmx  simple_test.jmx
kubernetes/: cronjobs-a.yaml  deployment-a.yaml  deployment-b.yaml  deployment-c.yaml  deployment-d.yaml  deployment-e.yaml  deployment-f.yaml  deployment-z.yaml  gcp-backendconfig-a.yaml  hpa-a.yaml  (+18 more)
(+124 files in other folders)
